# bershka-notify

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  example.json
migrations/2021-06-03-184842_create_stocks/: down.sql  up.sql
migrations/2021-06-03-202138_help_diesel_association/: down.sql  up.sql
migrations/2021-06-03-203557_stocks_product_id_not_null/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
