[package]
name = "bershka-notify"
version = "0.1.0"
authors = ["Zexa <zexa@zexa.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
reqwest = "0.11"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
